syntax = "proto3";
package fantas5.fantas5;

import "gogoproto/gogo.proto";
import "fantas5/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "fantas5/x/fantas5/types";

// GenesisState defines the fantas5 module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
